--- a/mobile-android/app/src/main/AndroidManifest.xml
+++ b/mobile-android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SDAApp"
         android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
         <activity
