--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "author": "SDA Team",
   "license": "UNLICENSED",
   "dependencies": {
+    "@mux/mux-node": "^12.8.0",
     "@supabase/supabase-js": "^2.38.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -35,6 +36,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.6",
     "pg": "^8.11.3",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0",
