--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@mux/mux-node": "^12.8.0",
     "@supabase/supabase-js": "^2.38.4",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -43,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
