Implements sermon creation and editing
Adds sermon creation and editing functionality to the admin panel.
This includes:
- Creation of new sermons
- Editing of existing sermons
- Ability to add/edit title, description, transcript, scripture references, speaker, series, video asset, and other metadata
- Persisting data through the API

Also, adds a migration to add the transcript column to the sermon table,
configures MinIO bucket initialization, and adds API endpoints for sermon
creation, retrieval, updating, and deletion.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,6 +21,14 @@ STORAGE_PROVIDER=supabase
 STORAGE_BUCKET_PUBLIC=public
 STORAGE_BUCKET_PRIVATE=private
 
+# MinIO Object Storage
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=sda-media
+
 # Streaming Provider
 STREAMING_PROVIDER=mux
 MUX_TOKEN_ID=your-mux-token-id
