Fixes media upload and RBAC issues
Addresses several issues:

- Corrects API URLs in the admin panel to align with backend changes.
- Enhances video upload component with improved error handling and logging.
- Expands RBAC to include permissions for speakers, ensuring proper access control.
- Removes deprecated mp4_support setting from Mux asset creation to align with Mux API changes and basic plans.
- Adds Mux credential validation and warning messages.

These changes collectively improve the media upload process, enhance security, and ensure compatibility with the updated Mux API.

--- a/admin-panel/.env.example
+++ b/admin-panel/.env.example
@@ -1,13 +1,13 @@
 # App Configuration
 NEXT_PUBLIC_APP_NAME="SDA Admin Panel"
-NEXT_PUBLIC_API_URL=http://localhost:3001/v1
+NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # NextAuth Configuration
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3100
 NEXTAUTH_SECRET=your-secret-key-here-min-32-chars
 
 # Backend API (for server-side requests)
-BACKEND_API_URL=http://localhost:3001/v1
+BACKEND_API_URL=http://localhost:3000
 BACKEND_API_KEY=your-backend-api-key
 
 # Optional: 2FA
