--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,10 +29,12 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=sda-media
 
-# Streaming Provider
+# Streaming Provider (for video processing and delivery)
+# Get your Mux credentials at: https://dashboard.mux.com/settings/access-tokens
 STREAMING_PROVIDER=mux
 MUX_TOKEN_ID=your-mux-token-id
 MUX_TOKEN_SECRET=your-mux-token-secret
+MUX_WEBHOOK_SECRET=your-mux-webhook-secret
 
 # Cloudflare Stream (alternative)
 # STREAMING_PROVIDER=cloudflare
