--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -10,36 +10,37 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "16.0.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next-auth": "^4.24.7",
+    "@hookform/resolvers": "^3.6.0",
+    "@mux/mux-player-react": "^3.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.23.8",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-table": "^8.17.3",
-    "date-fns": "^3.6.0",
-    "react-hook-form": "^7.51.5",
-    "@hookform/resolvers": "^3.6.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "react-dropzone": "^14.2.3",
-    "lucide-react": "^0.394.0",
-    "recharts": "^2.12.7",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.394.0",
+    "next": "16.0.4",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.5",
+    "react-markdown": "^9.0.1",
+    "recharts": "^2.12.7",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.4.5",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
