--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@ska/shared": "file:../shared",
     "@tanstack/react-query": "^5.62.16",
     "expo": "~54.0.25",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.9",
@@ -21,16 +22,18 @@
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
+    "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
