--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.1.8",
     "@ska/shared": "file:../shared",
     "@tanstack/react-query": "^5.62.16",
@@ -17,6 +19,7 @@
     "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
