Set up Docker Compose for multi-service deployment
Introduces Docker Compose configuration for local development and production deployments.

This includes:
- Defining services for backend, website, admin panel, PostgreSQL, Redis, MinIO, and Caddy.
- Configuring Dockerfiles and .dockerignore files for each service.
- Setting up environment variables for configuration and secrets using .env files.
- Implementing health checks for services.
- Adding Caddyfile for reverse proxy and SSL termination.
- Including deployment, backup, and restore scripts.
- Creating comprehensive documentation for deployment and maintenance.

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,23 @@ temp/
 # OS
 Thumbs.db
 
+# Data
 data/
+
+# Docker
+docker-compose.override.yml
+.env.production
+
+# Backups
+backups/
+*.sql
+*.sql.gz
+*.tar.gz
+
+# Caddy
+caddy_data/
+caddy_config/
+
+# Logs
+logs/
+*.log
