Refactor backend Docker setup and seeding
This commit significantly refactors the backend Docker setup and enhances the database seeding process.

Key changes include:
- **Optimized Dockerfile**: Introduced a multi-stage build for the backend to separate build dependencies from production runtime, improving image size and security.
- **Introduced `docker-entrypoint.sh`**: This script now handles database migrations and application startup, ensuring migrations are run before the application starts.
- **Enhanced Seeding Mechanism**: Replaced the development-only seeding with a more robust system that supports loading production data via `initial_data.sql`. A new `load-data.js` script and a `dump-seed-data.sh` script have been added to manage production data dumps and loading.
- **Development Environment Improvements**: Updated `docker-compose.dev.yml` and `Caddyfile.dev` for a more streamlined local development experience.
- **Revalidated Next.js data fetching**: Adjusted revalidation times for various pages to improve cache efficiency and data freshness.

These changes aim to improve deployment workflows, enhance security by separating build and runtime concerns, and provide a more reliable and flexible seeding mechanism for production and development environments.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,14 +7,24 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Install ALL dependencies (including dev dependencies for building)
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY . .
 
 # Build TypeScript
 RUN npm run build
+
+# Production dependencies stage
+FROM node:20-alpine AS deps
+
+WORKDIR /app
+
+COPY package*.json ./
+
+# Install only production dependencies
+RUN npm ci --only=production && npm cache clean --force
 
 # Production stage
 FROM node:20-alpine
@@ -27,12 +37,17 @@ RUN addgroup -g 1001 -S nodejs && adduser -S nodejs -u 1001
 
 WORKDIR /app
 
-# Copy dependencies and built app from builder
-COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
+# Copy production dependencies from deps stage
+COPY --from=deps --chown=nodejs:nodejs /app/node_modules ./node_modules
+
+# Copy built app from builder
 COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
 COPY --from=builder --chown=nodejs:nodejs /app/package*.json ./
 COPY --chown=nodejs:nodejs ./migrations ./migrations
 COPY --chown=nodejs:nodejs ./scripts ./scripts
+COPY --chown=nodejs:nodejs ./openapi ./openapi
+COPY --chown=nodejs:nodejs ./seeds ./seeds
+COPY --chown=nodejs:nodejs ./docker-entrypoint.sh ./docker-entrypoint.sh
 
 # Switch to non-root user
 USER nodejs
@@ -47,5 +62,5 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
 # Use dumb-init to handle signals properly
 ENTRYPOINT ["dumb-init", "--"]
 
-# Start the application
-CMD ["node", "dist/main.js"]
+# Run migrations and start application
+CMD ["sh", "docker-entrypoint.sh"]
