Add script to import adult lessons
Copies the 'data' folder into the backend container if it exists, to allow scripts to access the import data.
Adds a new npm script `import:lessons` to run the adult lessons import script.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,6 +49,9 @@ COPY --chown=nodejs:nodejs ./openapi ./openapi
 COPY --chown=nodejs:nodejs ./seeds ./seeds
 COPY --chown=nodejs:nodejs ./docker-entrypoint.sh ./docker-entrypoint.sh
 
+# Copy data folder (if it exists) for import scripts
+COPY --chown=nodejs:nodejs ../data ../data 2>/dev/null || true
+
 # Switch to non-root user
 USER nodejs
 
