Clean up and refine database seed data
Removes unused and outdated SQL migration files related to church seeding and cleanup.
Deletes the `002_seed_data.sql` migration, consolidating seed data into a new `data_only.sql` file.
Removes the `009_seed_churches.sql`, `011_cleanup_churches.sql`, and `012_update_church_details.sql` migrations as their functionality is now handled by `data_only.sql`.
Removes `013_seed_ebenezer_content.sql` as its content is also included in `data_only.sql`.

Adds a `clear-quarterlies.js` script to easily clear quarterly-related data in staging environments and updates `package.json` to include this script.

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "migrate:rollback": "node -r dotenv/config scripts/rollback.js",
     "seed": "node -r dotenv/config scripts/seed.js",
     "load-data": "node -r dotenv/config scripts/load-data.js",
+    "clear:quarterlies": "node -r dotenv/config scripts/clear-quarterlies.js",
     "import:lessons": "node -r dotenv/config scripts/import-adult-lessons.js"
   },
   "keywords": [
