--- a/Caddyfile
+++ b/Caddyfile
@@ -138,7 +138,7 @@
 		Referrer-Policy "strict-origin-when-cross-origin"
 		
 		# CSP for website
-		Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' {$API_DOMAIN:api.yourdomain.com}; media-src 'self' https:; frame-src 'self' https:;"
+		Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' {$API_DOMAIN:api.ska.aureliaonline.co.za}; media-src 'self' https:; frame-src 'self' https:;"
 	}
 	
 	reverse_proxy website:3000 {
