Rename project from SDA to SKA
This commit rebrands the application from "SDA Content App" to "SKA App" across all related files, including documentation, backend configurations, frontend components, and seed data.

This change reflects a shift in the project's naming convention.

--- a/backend/openapi/api-spec.yaml
+++ b/backend/openapi/api-spec.yaml
@@ -1,9 +1,9 @@
 openapi: 3.0.3
 info:
-  title: SDA Content App API
+  title: SKA Content App API
   version: 0.1.0
   description: |
-    REST API for the SDA Content App, providing access to sermons, devotionals,
+    REST API for the SKA Content App, providing access to sermons, devotionals,
     Sabbath School quarterlies, and AI-powered study chat.
   contact:
     name: API Support
