--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sda-backend",
   "version": "0.1.0",
-  "description": "SDA Content App - Backend API",
+  "description": "SKA Content App - Backend API",
   "main": "dist/main.js",
   "scripts": {
     "dev": "tsx watch src/main.ts",
@@ -28,7 +28,7 @@
     "api",
     "backend"
   ],
-  "author": "SDA Team",
+  "author": "SKA Team",
   "license": "UNLICENSED",
   "dependencies": {
     "@mux/mux-node": "^12.8.0",
