Add mobile app deployment and configuration
Introduces a new service for the mobile app, including its Dockerfile, Nginx configuration, and .dockerignore.
Configures Caddy to serve the mobile app and sets up necessary headers and reverse proxying.
Defines environment variables for the mobile app domain and API endpoint.

--- a/Caddyfile
+++ b/Caddyfile
@@ -148,6 +148,37 @@
 	}
 }
 
+# Mobile App (Expo Web)
+{$MOBILE_DOMAIN:mobile.ska.aureliaonline.co.za} {
+	encode gzip zstd
+
+	log {
+		output file /var/log/caddy/mobile.log {
+			roll_size 100mb
+			roll_keep 5
+			roll_keep_for 720h
+		}
+		format json
+	}
+
+	header {
+		-Server
+		Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+		X-Content-Type-Options "nosniff"
+		X-Frame-Options "SAMEORIGIN"
+		X-XSS-Protection "1; mode=block"
+		Referrer-Policy "strict-origin-when-cross-origin"
+
+		# CSP for mobile app
+		Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://{$API_DOMAIN:api.ska.aureliaonline.co.za} https://{$STORAGE_DOMAIN:storage.ska.aureliaonline.co.za}; media-src 'self' https:; frame-src 'self';"
+	}
+
+	reverse_proxy mobile-app:8081 {
+		health_interval 30s
+		health_timeout 5s
+	}
+}
+
 # Root domain redirect to www
 {$ROOT_DOMAIN:ska.aureliaonline.co.za} {
 	redir https://www.{$ROOT_DOMAIN:ska.aureliaonline.co.za}{uri} permanent
