Refactor mobile app Docker build
Creates a dedicated Dockerfile for the mobile app, enabling multi-stage builds for improved efficiency.
Separates shared and mobile dependencies to optimize build times.

Introduces a `.dockerignore.mobile` file to ensure smaller image sizes by excluding unnecessary files.
Updates the `docker-compose.yml` to correctly reference the new mobile Dockerfile and pass build arguments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,13 +201,16 @@ services:
   # Mobile App (Expo Web)
   mobile-app:
     build:
-      context: ./mobile
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./mobile/Dockerfile
+      args:
+        EXPO_PUBLIC_API_URL: ${EXPO_PUBLIC_API_URL:-https://api.ska.aureliaonline.co.za/v1}
+        EXPO_PUBLIC_APP_NAME: ${EXPO_PUBLIC_APP_NAME:-SKA Zimbabwe}
     container_name: sda_mobile
     restart: unless-stopped
     environment:
-      EXPO_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-https://api.ska.aureliaonline.co.za/v1}
-      EXPO_PUBLIC_APP_NAME: ${NEXT_PUBLIC_APP_NAME:-SKA Zimbabwe}
+      EXPO_PUBLIC_API_URL: ${EXPO_PUBLIC_API_URL:-https://api.ska.aureliaonline.co.za/v1}
+      EXPO_PUBLIC_APP_NAME: ${EXPO_PUBLIC_APP_NAME:-SKA Zimbabwe}
     ports:
       - "8081:8081"
     healthcheck:
