Update app branding and UI
Updates the application name, slug, and assets to reflect "SKAC Zimbabwe".
Refactors the tab layout to use a branded header and enhances tab bar styling.
Styles the home screen devotional card with a new feed-card design, improving visual appeal and user experience.
Adjusts color constants to incorporate brand-specific colors for a more cohesive look and feel.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,17 +1,17 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "SKAC Zimbabwe",
+    "slug": "skac-zimbabwe",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "mobile",
+    "icon": "./assets/images/logo.png",
+    "scheme": "skac",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "./assets/images/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#5B3A9D"
     },
     "ios": {
       "supportsTablet": true
