--- a/website/package.json
+++ b/website/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "hls.js": "^1.6.15",
+    "lucide-react": "^0.394.0",
     "next": "16.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "date-fns": "^3.6.0",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
     "react-player": "^2.16.0",
-    "lucide-react": "^0.394.0",
-    "clsx": "^2.1.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.4.5",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
