Update organization name
Renames the organization from "SKAC Zimbabwe" to "SKA Zimbabwe" across the mobile application and website.

This change reflects an updated name for the organization.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "SKAC Zimbabwe",
-    "slug": "skac-zimbabwe",
+    "name": "SKA Zimbabwe",
+    "slug": "ska-zimbabwe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
-    "scheme": "skac",
+    "scheme": "ska",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
