Add development password protection
Protects the development site from unauthorized access by requiring a password.
This is achieved by introducing a new password entry page, an API route for verification, and middleware to enforce access.
Environment variables are used to configure the password and enable/disable the protection.
A `DEV_PASSWORD_PROTECTION.md` file is also added to document the feature.

--- a/.env.development
+++ b/.env.development
@@ -89,3 +89,5 @@ CORS_ORIGIN=http://localhost:3100,http://localhost:3200
 
 # FCM_SERVER_KEY=
 # SENTRY_DSN=
+DEV_ACCESS_PASSWORD=dev2024
+ENABLE_PASSWORD_PROTECTION=true
