--- a/website/.env.example
+++ b/website/.env.example
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000/v1
 NEXT_PUBLIC_APP_NAME="SKA Zimbabwe"
 NEXT_PUBLIC_SITE_URL=http://localhost:3200
+
+# Development access password (required to access the site in development)
+# Set ENABLE_PASSWORD_PROTECTION=false to disable password protection
+ENABLE_PASSWORD_PROTECTION=true
+DEV_ACCESS_PASSWORD=dev2024
